--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.15.0",
+    "react-native-purchases": "^9.10.3",
+    "react-native-purchases-ui": "^9.10.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
